--- a/assets/ETX-routes/css/reusable-css.css
+++ b/assets/ETX-routes/css/reusable-css.css
@@ -113,8 +113,8 @@ img{
 /* -================================= REUSABLE CSS CLASSES ================================- */
 .container{
     max-width: 968px;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .flex-column{
@@ -498,6 +498,12 @@ input{
 }
 
 @media screen and (min-width: 700px){
+
+    .contact-form{
+        align-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
 
     .footer-credits-container{
         flex-direction: row;
