--- a/assets/ETX-routes/css/style.css
+++ b/assets/ETX-routes/css/style.css
@@ -2,345 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 
-/* -================================= VARIABLE CSS ================================- */
-:root{
-
-    /* == MAIN COLORS == */
-    /* --primary-color: #8FACAE; */
-    --primary-color : #8FAE96;
-    /* --accent-color: #29363A; */
-    --accent-color: #293A2A;
-    --text-color: #080F14;
-    --container-color: #B8B7B6;
-    --body-color: #F5F5F5;
-    /* ================= */
-    /* == FONT & TYPOGRAPHY == */
-    --body-font: "Roboto", sans-serif;
-
-    --big-font-size: 4rem;
-    --h1-font-size: 2.986rem;
-    --h2-font-size: 2.488rem;
-    --h3-font-size: 2.074rem;
-    --h4-font-size: 1.728rem;
-    --normal-font-size: 1rem;
-    --small-font-size: .75em;
-
-    --icon-size: 2rem;
-    --icon-size-small: 1rem;
-
-    --font-regular: 400;
-    --font-medium: 500;
-    --font-bold: 700;
-
-    /* ================= */
-
-    /* =========Z INDEX======== */
-    --z-fixed: 10;
-    --border-radius: 4px;
-    /* ================= */
-
-}
-
-
-/* -=================================================================- */
-
-/* -================================= BASE ================================- */
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-html{
-    scroll-behavior: smooth;
-}
-
-body{
-    font-family: var(--body-font);
-    background-color: var(--body-color);
-    color: var(--text-color);
-}
-
-h1{
-    font-size: var(--h1-font-size);	
-}
-
-h2{
-    font-size: var(--h2-font-size);	
-}
-
-h3{
-    font-size: var(--h3-font-size);	
-}
-
-h4{
-    font-size: var(--h4-font-size);
-}
-
-ul{
-    list-style: none;
-}
-
-a{
-    text-decoration: none;
-}
-
-button{
-    border: none;
-}
-
-img{
-    max-width: 100%;
-    height: auto;
-}
-
-/* ANIMATIONS */
-
-@keyframes appear{
-
-    from{
-        opacity: 0;
-        scale: 0.5;
-    }
-
-    to{
-        opacity: 1;
-        scale: 1;
-    }
-}
-
-/* -================================= REUSABLE CSS CLASSES ================================- */
 .container{
-    max-width: 968px;
-    margin-left: 2rem;
     margin-right: 2rem;
+    margin-left: 2rem;
 }
 
-.flex-column{
-    display: flex;
-    flex-direction: column;
-}
 
-.responsive-container{
-    display: flex;
-    flex-direction: column;
-}
-
-.grid{
-    display: grid;
-}
-
-.section{
-    position: relative;
-    padding: 0 0 8rem;
-    overflow-x: hidden;
-}
-
-.section-title{
-    font-size: var(--h1-font-size);
-    font-weight: var(--font-bold);
-}
-
-.section-title span{
-    color: var(--primary-color);
-}
-
-.section-subtitle{
-    font-size: var(--h2-font-size);
-    font-weight: var(--font-medium);
-}
-
-.description-medium,
-.description-regular{
-    font-size: var(--normal-font-size);
-}
-
-.description-medium{
-    font-weight: var(--font-medium);
-}
-
-.description-regular{
-    font-weight: var(--font-regular);
-}
-
-.none{
-    display: none;
-}
-
-/* -======= BUTTONS ========- */
-.button{
-    height: 64px;
-    width: 224px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: var(--border-radius);
-}
-
-.button-primary{
-    background-color: var(--container-color);
-}
-
-.button-primary h4,
-.button-secondary h4{
-    font-weight: var(--font-bold);
-    color: var(--body-color);
-}
-
-.button-secondary{
-    background-color: transparent;
-    border: 4px solid var(--accent-color);
-}
-/* -=================================================================- */
-
-/* -================================= HEADER & NAVIGATION ================================- */
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-    padding: 1rem 0;
-    width: 100%;
-}
-
-.nav-logo img{
-    width: 164px;
-}
-
-.nav-list{
-    display: flex;
-    position: relative;
-}
-
-.nav-list-item a{
-    color: var(--text-color);
-    font-size: var(--h4-font-size);
-    font-weight: var(--font-regular);
-}
-
-.nav-list.show-nav{
-    right: 0;
-}
-
-.nav-toggle-btn.rotate{
-    transform: rotate(0.5turn);
-}
-
-.nav-list-item:nth-child(6){
-    width: 240px;
-    height: 64px;
-    background-color: var(--primary-color);
-    display: grid;
-    place-items: center;
-    margin-top: 5rem;
-}
-
-/* ADD BLUR TO HEADER */
-.blur-header{
-    background-color: transparent;
-}
-
-.blur-header::after{
-    content: '';
-    position: absolute;
-    width: 1000%;
-    height: 100%;
-    background-color: var(--body-color);
-    top: 0;
-    left: 0;
-    transition: ease-in-out .4s;
-    z-index: -1;
-    box-shadow: 0 4px 8px 0 #0000005a;
-}
-
-.nav-list-item .active-link{
-    color: var(--accent-color);
-    font-weight: var(--font-bold);
-}
-
-.nav-list-item:nth-child(6) .nav-button{
-    color: var(--text-color);
-    font-weight: var(--font-bold);
-}
-
-/* -================================= MOBILE NAVIGATION CSS ================================- */
-@media screen and (max-width: 1023px){
-
-    .header{
-        padding: 1rem 0;
-    }
-
-    .nav-list{
-        position: absolute;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 3rem;
-        background-color: var(--body-color);
-        padding: 12rem 2rem;
-        right: -100%;
-        top: 0;
-        transition: right .5s;
-        width: 100%;
-        border-radius: var(--border-radius);
-    }
-
-    .nav-toggle-btn{
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        height: 32px;
-        width: 32px;
-        display: grid;
-        place-items: center;
-        transition: .35s;
-        z-index: var(--z-fixed);
-    }
-
-    .nav-toggle-btn i{
-        font-size: var(--icon-size);
-        color: var(--text-color-w);
-    }
-
-}
-
-/* -================================= DESKTOP NAVIGATION CSS ================================- */
-@media screen and (min-width: 1023px){
-
-
-    .nav-toggle-btn{
-        display: none;
-    }
-
-    .navigation{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .nav-list{
-        flex-direction: row;
-        gap: 2rem;
-        align-items: center;
-    }
-
-    .nav-list-item a{
-        font-size: 13.33px;
-        font-weight: var(--font-regular);
-    }
-
-    .nav-list-item:nth-child(6){
-        width: 128px;
-        height: 48px;
-        margin-top: 0;
-        margin-left: 1rem;
-        border-radius: var(--border-radius);
-    }
-    
-}
-/* -======================================================================================- */
-
-
-/* -================================= SECTION 1 ================================- */
+/* -================================= HOME SECTION ================================- */
 .home{
     padding-top: 10rem;
     display: flex;
@@ -402,7 +70,7 @@ img{
 /* -============================================================================- */
 
 
-/* -================================= SECTION 2 ================================- */
+/* -================================= GALLERY SECTION ================================- */
 .gallery{
     padding-top: 8rem;
 }
@@ -469,18 +137,6 @@ img{
     z-index: 7;
 }
 
-/* .g-i-1:hover{
-    grid-row: span 2;
-}
-
-.g-i-2:hover{
-    grid-column: span 2;
-}
-
-.g-i-5:hover{
-    grid-row: span 2;
-} */
-
 .gallery-buttons-container{
     gap: 1rem;
 }
@@ -497,7 +153,7 @@ img{
 /* -============================================================================- */
 
 
-/* -================================= SECTION 3 ================================- */
+/* -================================= SERVICES SECTION ================================- */
 .services-container{
     gap: 3rem;
 }
@@ -571,7 +227,7 @@ img{
 /* -============================================================================- */
 
 
-/* -================================= SECTION 4 ================================- */
+/* -================================= PORTFOLIO SECTION ================================- */
 .portfolio-title{
     text-align: center;
     margin-bottom: 2rem;
@@ -630,7 +286,7 @@ img{
 }
 /* -============================================================================- */
 
-/* -================================= SECTION 5 ================================- */
+/* -================================= ABOUT SECTION ================================- */
 .about-container{
     gap: 3rem;
 }
@@ -702,7 +358,7 @@ img{
     margin-top: 1rem;
     gap: 1rem;
 }
-/* -=========================================================================- */
+/* -================================== CONTACT SECTION =======================================- */
 
 .contact-container{
     gap: 4rem;
@@ -764,7 +420,7 @@ input{
 .contact-button{
     color: var(--primary-color);
 }
-/* -=========================================================================- */
+/* -=================================== FOOTER SECTION ======================================- */
 
 .footer{
     background-color: var(--accent-color);
