--- a/assets/ETX-routes/css/gallery.css
+++ b/assets/ETX-routes/css/gallery.css
@@ -110,10 +110,26 @@
 }
 
 .image-card-video{
-    height: 100%;
+    /* height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: var(--border-radius); */
+    position: relative;
+    padding-bottom: 56.25%; 
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: var(--body-color);
     border-radius: var(--border-radius);
+}
+
+.image-card-video iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .image-card{
