--- a/assets/ETX-routes/css/style.css
+++ b/assets/ETX-routes/css/style.css
@@ -10,7 +10,7 @@
 
 /* -================================= HOME SECTION ================================- */
 .home{
-    padding-top: 10rem;
+    padding-top: 12rem;
     display: flex;
     align-items: center;
     color: var(--body-color);
@@ -20,6 +20,14 @@
 
 .home-container{
     gap: 1rem;
+}
+
+.home-logo-container{
+    align-self: center;
+}
+
+.home-logo-container img{
+    width: 50px;
 }
 
 .home-subtitle{
@@ -39,10 +47,40 @@
     gap: 2rem;
 }
 
+.accent-line{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: var(--container-color);
+}
+
 .home-info-list{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+}
+
+.home-contacts-container{
+    display: none;
+    margin-top: 4rem;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.home-contact-item{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.home-contact-item i{
+    font-size: var(--icon-size);
+}
+
+.home-contact-item a{
+    color: var(--body-color);
+    font-size: var(--h4-font-size);
+    font-weight: var(--font-light);
 }
 
 .home-background-video {
@@ -523,6 +561,15 @@ input{
 /* -================================= CSS BREAKPOINTS ================================- */
 /* -==== For medium devices ====- */
 @media screen and (min-width: 700px){
+
+    .accent-line{
+        width: 4px;
+        height: 60px;
+    }
+
+    .home-contacts-container{
+        display: flex;
+    }
 
     .services-list{
         grid-template-columns: repeat(2, 1fr);
