--- a/assets/ETX-routes/css/projects.css
+++ b/assets/ETX-routes/css/projects.css
@@ -120,7 +120,29 @@
 }
 
 .showcase-item-container{
+    width: 100%;
+    height: 100%;
+    position: relative;
     transition: all .4s ease-in-out;
+}
+
+.grid-item-seven{
+    padding-bottom: 56.25%; 
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.showcase-item-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0; 
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
 }
 
 .showcase-item-container:hover{
@@ -135,7 +157,8 @@
 .grid-item-tre,
 .grid-item-four,
 .grid-item-five,
-.grid-item-six{
+.grid-item-six,
+.grid-item-seven{
     height: 304px;
 }
 
@@ -180,5 +203,9 @@
     .grid-item-secondary{
         grid-column: span 2;
         grid-row: span 1;
+    }
+
+    .grid-item-seven{
+        grid-column: span 4;
     }
 }
